Fix Cupertino community modal on tablet

--- a/src/layouts/cupertino-settings.scss
+++ b/src/layouts/cupertino-settings.scss
@@ -290,7 +290,7 @@ body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-phone {
     }
   }
 }
-body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-tablet .modal.mod-sidebar-layout {
+body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-tablet .modal.mod-sidebar-layout:not(.mod-community-modal) {
   .setting-item:not(.setting-item-heading) {
     background-color: var(--background-primary);
   }
